2016-11-16  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR sanitizer/78294
	* tsan/tsan_rtl.cc: Add missing attribute.

2016-06-03  Release Manager

	* GCC 5.4.0 released.

2016-05-18  Jakub Jelinek  <jakub@redhat.com>

	Backported from mainline
	2016-05-17  Jakub Jelinek  <jakub@redhat.com>

	PR sanitizer/71160
	* asan/asan_malloc_linux.cc: Cherry pick upstream r254395
	and r269633.

2016-01-13  Maxim Ostapenko  <m.ostapenko@partner.samsung.com>

	PR sanitizer/69147
	* asan/asan_mac.cc: Cherry pick upstream r241487.
	* sanitizer_common/sanitizer_mac.cc: Cherry pick upstream r224315.
	* sanitizer_common/sanitizer_mac.h: Likewise.

2015-12-04  Release Manager

	* GCC 5.3.0 released.

2015-09-09  Markus Trippelsdorf  <markus@trippelsdorf.de>

	PR sanitizer/67258
	* ubsan/ubsan_type_hash.cc: Cherry pick upstream r244101.

2015-07-16  Release Manager

	* GCC 5.2.0 released.

2015-05-12  Yury Gribov  <y.gribov@samsung.com>

	Backport from mainline
	2015-04-13  Yury Gribov  <y.gribov@samsung.com>

	PR sanitizer/64839
	* sanitizer_common/sanitizer_platform.h: Cherry pick
	upstream r234470.
	* sanitizer_common/sanitizer_platform_limits_posix.cc: Ditto.
	* configure.ac (RPC_DEFS): Check for precense of RPC headers.
	* sanitizer_common/Makefile.am (DEFS): Pass info to compiler.
	* Makefile.in: Regenerate.
	* asan/Makefile.in: Regenerate.
	* config.h.in: Regenerate.
	* configure: Regenerate.
	* interception/Makefile.in: Regenerate.
	* libbacktrace/Makefile.in: Regenerate.
	* lsan/Makefile.in: Regenerate.
	* sanitizer_common/Makefile.in: Regenerate.
	* tsan/Makefile.in: Regenerate.
	* ubsan/Makefile.in: Regenerate.

2015-04-22  Release Manager

	* GCC 5.1.0 released.

2015-03-23  Christophe Lyon  <christophe.lyon@linaro.org>

	PR sanitizer/59009
	* sanitizer_common/sanitizer_platform_limits_posix.cc: Cherry pick
	upstream r230324.
	* sanitizer_common/sanitizer_platform.h: Likewise.
	* sanitizer_common/sanitizer_common_syscalls.inc: Likewise.
