@@ -1,3 +1,12 @@
+2017-02-17  Andreas Tobler  <andreast@gcc.gnu.org>
+
+	Backported from mainline
+	2017-02-16  Andreas Tobler  <andreast@gcc.gnu.org>
+
+	PR sanitizer/79562
+	* sanitizer_common/sanitizer_platform_limits_posix.cc: Cherry-pick
+	upstream r294806.
+
 2016-11-16  Markus Trippelsdorf  <markus@trippelsdorf.de>
 
 	PR sanitizer/78294
